--- a/p36.html
+++ b/p36.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 
-		<a target ="back" href ="E:\Brian_Pagina"> <img src ="E:\Brian_Pagina\fotos\TODO.png"></a>
+		<a target ="back" href ="index.html"> <img src ="fotos\TODO.png"></a>
 		
 	</body>
 </html> 
