--- a/p4.html
+++ b/p4.html
@@ -17,6 +17,6 @@
         </ul>
         <hr>
         <h1>agregar imajen</h1>
-        <img src="" alt="logo conalep">
+        <img src="fotos/1.png" >
     </body>
 </html>
