--- a/p5.html
+++ b/p5.html
@@ -4,6 +4,6 @@
         <title> quinto programa</title>
     </head>
     <body>
-        <h1><font color="white" face="arial"> hola mundo</font></h1>
+        <h1><font color="blue" face="arial"> hola mundo</font></h1>
     </body>
 </html>
