--- a/p10.html
+++ b/p10.html
@@ -4,6 +4,6 @@
         <title>decimo programa</title>
     </head>
     <body>
-        <img src="" width="100" height="100">
+        <img src="fotos/U.jpg" width="100" height="100">
     </body>
 </html>
