--- a/p28.html
+++ b/p28.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1 align="center" size="20">28<br></h1>
-        <img width="600" src="https://cdn.elpopular.mx/notas/secciones/mundo/2019/09/19/a-37-anos-del-emoticon-que-todos-conocemos-la-carita-feliz/f45bf32aa0624c5abc10ef13b3689bb8.jpg" alt="emoji">
+        <img width="600" src="fotos/luna.jpeg" >
     </body>
 </html>
