--- a/p30.html
+++ b/p30.html
@@ -9,7 +9,7 @@
             <div><font size=90>0</font></div>
             </div>
             <center>
-            <img width="600"src="https://w7.pngwing.com/pngs/400/44/png-transparent-yellow-emoji-smiley-emoticon-emoji-laughter-emojis-emoticon-peace-number-glasses-tears-thumbnail.png" alt="xd">
+            <img width="600" src="fotos/luna.jpeg">
             </center>
     </body>
 </html>
