--- a/p32.html
+++ b/p32.html
@@ -6,7 +6,7 @@
     <body>
         <h1><font size="60">32</font></h1>
         <center>
-            <img width="600"src="https://i.pinimg.com/474x/a5/56/34/a5563420167f05a810cdffe69244fc92.jpg" alt="xd">
+            <img width="600" src="fotos/luna.jpeg" alt="xd">
         </center>
     </body>
 </html>
