--- a/p9.html
+++ b/p9.html
@@ -4,10 +4,10 @@
         <title>noveno programa</title>
     </head>
     <body>
-        <h1><font color="yellow" face="calibri" sie="28">esta es mi programa</font></h1>
+        <h1><font color="blue" face="calibri" sie="28">rograma</font></h1>
         <h2><font color="black" face="arial" size="25"> mi programa xd</font></h2>
-        <h2><font color="green" face="comic" size="11"> pagina web</font></h2>
-        <h2><font color="red" face="times" size="17"> numero 1</font></h2>
-        <h2><font color="blue" face="arial" size="20">numero nueve</font></h2>
+        <h2><font color="yelow" face="comic" size="11"> pagina </font></h2>
+        <h2><font color="red" face="times" size="17"> 1</font></h2>
+        <h2><font color="black" face="arial" size="20">numero </font></h2>
     </body>
 </html>
